style: fix icon size and alignment
- also fix scale of pulse animation

--- a/src/App.css
+++ b/src/App.css
@@ -201,13 +201,17 @@ body {
 }
 .App .App-button-lap {
   background-image: url("./images/icons/rotate.svg");
+  background-size: 60%;
+  background-position: 50% 40%;
   transform: rotate(90deg);
-}
-.App .App-button-config {
-  background-image: url("./images/icons/cog.svg");
 }
 .App .App-button-clear {
   background-image: url("./images/icons/io.svg");
+  background-size: 60%;
+  background-position: 50% 45%;
+}
+.App .App-button-config {
+  background-image: url("./images/icons/cog.svg");
 }
 
 
@@ -234,7 +238,7 @@ body {
 	}
 
 	100% {
-		transform: rotate(-270deg) scale(0.95);
+		transform: rotate(-270deg) scale(1);
 		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
 	}
 }
